Refactor tests to use temporary directory for fixture paths